fix: update navbar class from 'navbar-expand-md' to 'navbar-expand-lg' for improved responsiveness style: increase font size for navbar items and change list marker color to enhance visibility

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -171,6 +171,12 @@ nav a.nav-link:focus {
 
 .navbar-nav {
   text-align: right;
+  font-size: 1.2rem;
+}
+
+ul li::marker,
+il li::marker {
+  color: var(--yellow-400);
 }
 
 /* Hero section */
